[package]
name = "nexus-network"
version = "0.9.5"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[features]
build_proto = []

[[bin]]
name = "nexus-cli"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3          # Maximum optimization level
lto = true             # Link Time Optimization for better performance
codegen-units = 1      # Single codegen unit for maximum optimization
panic = 'abort'        # Abort on panic (smaller binaries, better performance)
strip = true           # Strip symbols for smaller binaries
debug = true           # Keep debug symbols for easier debugging

[profile.ci-build]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[dependencies]
# Nexus crates
nexus-platform = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", rev = "3134371" }

# CLI crates
anyhow = "1.0.86"
async-trait = "0.1.79"
base64 = "0.22.0"
cfg-if = "1.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3.30"
futures-util = "0.3.30"
gloo-timers = "0.3.0"
hex = "0.4"
home = "0.5.9"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["full"] }
iana-time-zone = "0.1.60"
log = "0.4.26"
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.4" }
postcard = "1.0.8"
prost = "0.12.3"
prost-types = "0.12.3"
rand = "0.8.5"
rand_core = "0.6"
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"
strum = "0.26.3"
sysinfo = "0.33.1"
thiserror = "2.0.12"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
axum = "0.7.5"
semver = "1.0"

[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1.88"
mockall = "0.12"
predicates = "3"
tempfile = "3.20.0"

[build-dependencies]
prost-build = "0.13"
